--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
     <span><i></i></span>
   </div>
 </div>
+
+    <footer>
+        <small>Copyright &copy; Hritik Mondasl</small>
+    </footer>
 </body>
 </html>
