--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
     <footer>
-        <small>Copyright &copy; Hritik Mondasl</small>
+        <h3>Made by hritik mondal</h3>
     </footer>
 </body>
 </html>
